# django-fullstack-biolerplate

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.in  docker-compose-dev.yml  pyproject.toml  requirements.in
.circleci/: config.yml
.github/workflows/: backend.yml
backend/: .dockerignore  .env.example  Dockerfile  Procfile  actions.py  entrypoint.sh  gunicorn.sh  manage.py  pytest.ini  requirements.txt  start.sh  start_celery.sh
backend/apps/delivery/: admin.py  models.py  serializers.py  services.py  tasks.py  views.py
backend/apps/delivery/migrations/: 0001_initial.py  0002_auto_20200926_1945.py
backend/apps/delivery/tests/: factories.py  (+2 more)
backend/apps/meta/: admin.py  apps.py  models.py  serializers.py
backend/apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  authentication.py  forms.py  managers.py  models.py  serializers.py  tasks.py  views.py
backend/common/: __init__.py  models.py  paginator.py  views.py
backend/djangoFullstack/: celery.py  urls.py
backend/djangoFullstack/settings/: __init__.py  base.py  local.py  local_base.py  production.py
backend/onlineBenevolent/: api.py  asgi.py  celery.py  celerybeat_schedule.py  urls.py
backend/onlineBenevolent/settings/: base.py  local.py  production.py
backend/requirements/: common.txt  development.txt
backend/users/: admin.py  models.py  tasks.py
backend/users/migrations/: 0001_initial.py
compose/postgres/: Dockerfile  init-user-db.sh  init.sql
config/: .env.example
(+22 files in other folders)
