[tool.poetry]
name = "full stack"
version = "0.1.0"
description = ""
authors = ["Abdullah Mohammed <abdullahabdelrhim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
django = "^3.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4"
autoflake = "^1.3"
pydevd-pycharm = "^202.6397"
mypy = "^0.782"
flake8-fixme = "^1.1"

pytest = "^6.0"
pytest-cov = "^2.10"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^1.34"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
quiet = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | [a-z_]+/migrations
)/
'''
